--- a/src/style.css
+++ b/src/style.css
@@ -81,10 +81,12 @@ body {
   font-family: var(--font-body);
   font-size: var(--fontSize-1);
   color: var(--color-text);
+  background-color: black;
 }
 
 footer {
   padding: var(--spacing-6) var(--spacing-0);
+  color: white !important;
 }
 
 hr {
@@ -106,6 +108,7 @@ h6 {
   margin-bottom: var(--spacing-6);
   line-height: var(--lineHeight-tight);
   letter-spacing: -0.025em;
+  color: white !important;
 }
 
 h2,
@@ -154,7 +157,11 @@ h4 > a,
 h5 > a,
 h6 > a {
   text-decoration: none;
-  color: inherit;
+  color: red;
+}
+
+a {
+  color: red !important;
 }
 
 /* Prose */
@@ -165,6 +172,7 @@ p {
   --x-height-multiplier: 0.35;
   margin: var(--spacing-0) var(--spacing-0) var(--spacing-8) var(--spacing-0);
   padding: var(--spacing-0);
+  color: white !important;
 }
 
 ul,
@@ -181,6 +189,7 @@ ul li,
 ol li {
   padding-left: var(--spacing-0);
   margin-bottom: calc(var(--spacing-8) / 2);
+  color: white !important;
 }
 
 li > p {
